WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285777
REGRESSION (
284795@main
): [iOS] Find on Page buttons do not move to next result on pdfbooksworld.com
https://bugs.webkit.org/show_bug.cgi?id=285777
Summary
REGRESSION (284795@main): [iOS] Find on Page buttons do not move to next resu...
Aditya Keerthi
Reported
2025-01-10 15:24:34 PST
rdar://142585912
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-01-10 15:41:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38876
EWS
Comment 2
2025-01-11 15:26:15 PST
Committed
288765@main
(4a615c7a8d08): <
https://commits.webkit.org/288765@main
> Reviewed commits have been landed. Closing PR #38876 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug